# indexes

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
_legacy/: bcb.py
_legacy/_webapp/frontend/src/: App.js  index.js
_legacy/_webapp/frontend/src/components/: MyLineChart.jsx
indexes/: .pdm.toml  README.md  aux_commands.py  httpx_connections.py  main.py  pyproject.toml  settings.py
indexes/apis/: README.md  bcb.py  ibge.py
indexes/email_/: sender.py
indexes/models/: ipca.py
indexes/service/: bcb.py
indexes/templates/: base.html.jinja2  index.html.jinja2  ipca-rate-percentage-negative.html.jinja2  ipca-rate-percentage-positive.html.jinja2  ipca-rate-percentage-zero.html.jinja2
indexes/test/service/: test_bcb.py
webapp/frontend/: .eslintcache  package-lock.json  package.json
webapp/frontend/src/components/: DIToday.jsx
