[project]

name = "Indexes"
version = "0.1.0"
description = "Brazil's economic indexes"
authors = [
    {name = "Allainclair Flausino dos Santos", email = "allainclair@withmartian.com"},
]

dependencies = [
	"babel>=2.15.0",
	"litestar[jinja,opentelemetry]>=2.9.1",
	"logfire>=0.46.1",
	"pydantic>=2.8.0",
	"pydantic-settings>=2.3.4",
	"opentelemetry-instrumentation-httpx>=0.46b0",
	"uvicorn>=0.30.1",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
#    "setuptools",
]
lint = [
    "ruff",
    "mypy",
]
debug= [
	"ipython",
	"rich",
]

[tool.ruff]
line-length = 80

# Suggestions to add to select: EM
lint.select = [
	"A",
	"ARG",
	"ANN",  # Take care if there is conflict with mypy.
	"ASYNC",
	"B",
	"BLE",
	"COM",
	"C4",
	"C90",
	# "DTZ",  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
	"E",
	"EM",
	"EXE",
	"F",
	"FBT",
	"FLY",
	"FURB",
	"G",
	"I",
	"ICN",
	"INP",
	"INT",
	"ISC",
	"LOG",
	"N",
	"PERF",
	"PGH",
	"PIE",
	"PL",
	"PT",
	"PTH",
	"PYI",
	"Q",
	"RET",
	"RSE",
	"RUF",
	"S",
	"SIM",
	"SLOT",
	"SLF",
	"T10",
	"T20",
	"TCH",
	"TD",
	"TID",
	"TRY",
	"UP",
	"W",
	"YTT"
]
lint.ignore = [
	"ANN101",  # https://docs.astral.sh/ruff/rules/missing-type-self/
	"ANN401",  # https://docs.astral.sh/ruff/rules/any-type/

	# The following rules may cause conflicts when used with the formatter: `COM812`.
	"COM812",  # https://docs.astral.sh/ruff/rules/missing-trailing-comma/

	# The following rules may cause conflicts when used with the formatter: `ISC001`
	"ISC001",  # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/

	# PLR2004 Magic value used in comparison
	"PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/

	"S101",  # https://docs.astral.sh/ruff/rules/assert/"

	# TD003 Missing issue link on the line following this TODO
	"TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link/

	# The `format.indent-style="tab"` option is incompatible with `W191`, which lints against all uses of tabs
	"W191",  # https://docs.astral.sh/ruff/rules/tab-indentation/
]

lint.mccabe.max-complexity = 5

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"  # Use `\n` line endings for all files

[tool.ruff.lint.isort]
case-sensitive = true
split-on-trailing-comma = false

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
